@@ -17,6 +17,7 @@
 * Fixes in RPM dependency on libibverbs
 * Fixes in ABI backward compatibility for active message protocol
 * Add support for DC full-handshake mode (off by default).
+* Fixes in Active Messages short reply protocol.
 
 ## 1.10.0 (March 9, 2021)
 ### Features:
